--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
+absl-py==2.2.2
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
 anyio==4.9.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
 asttokens==3.0.0
 async-lru==2.0.5
+async-timeout==5.0.1
 attrs==25.3.0
 babel==2.17.0
 beautifulsoup4==4.13.4
@@ -24,7 +29,11 @@ fastjsonschema==2.21.1
 filelock==3.18.0
 fonttools==4.57.0
 fqdn==1.5.1
+frozenlist==1.6.0
 fsspec==2025.3.2
+gitdb==4.0.12
+GitPython==3.1.44
+grpcio==1.71.0
 h11==0.14.0
 httpcore==1.0.8
 httpx==0.28.1
@@ -51,11 +60,15 @@ jupyterlab==4.4.0
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 kiwisolver==1.4.7
+lightning==2.5.1.post0
+lightning-utilities==0.14.3
+Markdown==3.8
 MarkupSafe==3.0.2
 matplotlib==3.9.4
 matplotlib-inline==0.1.7
 mistune==3.1.3
 mpmath==1.3.0
+multidict==6.4.3
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
@@ -72,6 +85,8 @@ pillow==11.2.1
 platformdirs==4.3.7
 prometheus_client==0.21.1
 prompt_toolkit==3.0.51
+propcache==0.3.1
+protobuf==6.30.2
 psutil==7.0.0
 pure_eval==0.2.3
 pycparser==2.22
@@ -79,6 +94,7 @@ Pygments==2.19.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
+pytorch-lightning==2.5.1.post0
 pytz==2025.2
 pywin32==310
 pywinpty==2.0.15
@@ -93,18 +109,23 @@ scikit-learn==1.6.1
 scipy==1.13.1
 Send2Trash==1.8.3
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
 sympy==1.14.0
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
 tomli==2.2.1
-torch==2.7.0
-torchaudio==2.7.0
-torchvision==0.22.0
+torch==2.7.0+cu126
+torchaudio==2.7.0+cu126
+torchmetrics==1.7.1
+torchvision==0.22.0+cu126
 tornado==6.4.2
+tqdm==4.67.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.13.2
@@ -116,4 +137,6 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+Werkzeug==3.1.3
+yarl==1.20.0
 zipp==3.21.0
